--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DwarfJump</string>
+    <string name="startgame">Start Game!</string>
+    <string name="scoreboard">ScoreBoard</string>
+    <string name="aboutus">About Us</string>
 </resources>
