--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DwarfJump</string>
-    <string name="startgame">Start Game!</string>
-    <string name="scoreboard">ScoreBoard</string>
+    <string name="startgame">&#160;Start Game!&#160;</string>
+    <string name="scoreboard">&#160;ScoreBoard&#160;</string>
     <string name="aboutus">About Us</string>
 </resources>
